--- a/js/test/index.html
+++ b/js/test/index.html
@@ -1,5 +1,17 @@
+<script src="../vanillaHttpClient/vanilla-http-client.js"></script>
 <script src="../visualization.js"></script>
+<script src="../tree.js"></script>
+<script src="../slice.js"></script>
+<script>
+	// Get canvas DOM element.
+	canvasElement = document.getElementById('visualization');
 
-<canvas>
+	// Define canvas element for visualizer.
+	beyondTheFold.visualization.setCanvas(canvasElement);
 
+	// Retrieve test data.
+	httpClient.get('../test-data/test_data_7.json', beyondTheFold.handleDataResponse)
+</script>
+
+<canvas id="visualization">
 </canvas>
